--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-rsa": "0.0.3",
     "sqlite3": "^3.1.13",
     "uuid": "^3.2.1",
-    "ws": "^4.0.0"
+    "ws": "^4.0.0",
+    "LK-C": "github:tracelessman/LK-C"
   }
 }
