--- a/package.json
+++ b/package.json
@@ -17,12 +17,12 @@
     "webpack": "^4.0.1"
   },
   "dependencies": {
+    "LK-C": "github:tracelessman/LK-C",
     "crypto-js": "^3.1.9-1",
     "qr-image": "^3.2.0",
     "react-native-rsa": "0.0.3",
     "sqlite3": "^3.1.13",
     "uuid": "^3.2.1",
-    "ws": "^4.0.0",
-    "LK-C": "github:tracelessman/LK-C"
+    "ws": "^4.0.0"
   }
 }
