--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "LK",
+  "name": "LK-D",
   "version": "0.0.14",
   "main": "./main.js",
   "scripts": {
     "start": "cross-env NODE_ENV=development electron ./main.js",
     "build": "node build.js",
     "publish": "node build.js && electron .",
-    "asars": "cd node_modules/sqlite3 && npm i && cd ../../&& asar pack node_modules/sqlite3 asars/sqlite3.asar",
+    "asars": "node bin/asars",
     "postinstall": "node bin/postinstall",
     "install:sqlite3": "node bin/installSqlite3",
     "updateC": "rm -rf node_modules/@lk && npm i",
@@ -17,6 +17,7 @@
     "asar": "^0.14.2",
     "babel-loader": "^7.1.3",
     "babili-webpack-plugin": "^0.1.2",
+    "chalk": "^2.4.1",
     "cross-env": "^5.2.0",
     "del": "^3.0.0",
     "electron": "3.0.7",
