--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@ys/collection": "github:spirit1453/node_collection#publish",
     "crypto-js": "^3.1.9-1",
     "debug": "^4.1.0",
+    "electron-context-menu": "^0.11.0",
     "lodash": "4.17.11",
     "qr-image": "^3.2.0",
     "react-native-rsa": "0.0.3",
