--- a/package.json
+++ b/package.json
@@ -37,5 +37,5 @@
     "uuid": "^3.2.1",
     "ws": "^4.0.0"
   },
-  "repository": "https://github.com/tracelessman/LK-D.git"
+  "repository": "https://github.com/tracelessman/LK-D.git#dev"
 }
