--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "del": "^3.0.0",
     "devtron": "^1.4.0",
     "electron": "3.0.7",
-    "webpack": "^4.0.1"
+    "webpack": "^4.29.6"
   },
   "dependencies": {
     "@lk/LK-C": "file:submodule/LK-C",
@@ -30,6 +30,7 @@
     "crypto-js": "^3.1.9-1",
     "debug": "^4.1.0",
     "electron-context-menu": "^0.11.0",
+    "fs-extra": "^7.0.1",
     "lodash": "4.17.11",
     "qr-image": "^3.2.0",
     "react-native-rsa": "0.0.3",
