删除消息窗口

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "LK-D",
-  "version": "0.0.50",
+  "version": "0.0.51",
   "main": "./main.bundle.js",
   "scripts": {
     "start": "cross-env NODE_ENV=development electron --inspect=5858 --remote-debugging-port=9222 ./main.js",
@@ -32,6 +32,7 @@
     "electron-context-menu": "^0.11.0",
     "fs-extra": "^7.0.1",
     "lodash": "4.17.11",
+    "node-ssh": "^5.1.2",
     "qr-image": "^3.2.0",
     "react-native-rsa": "0.0.3",
     "sqlite3": "^4.0.4",
