--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.57",
   "main": "./main.bundle.js",
   "scripts": {
+    "lint": "eslint --fix --ext .js .",
     "start": "cross-env NODE_ENV=development electron --inspect=5858 --remote-debugging-port=9222 ./main.js",
     "build": "node build.js",
     "publish": "node build.js && electron .",
@@ -22,6 +23,18 @@
     "del": "^3.0.0",
     "devtron": "^1.4.0",
     "electron": "3.0.7",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-flowtype": "^3.7.0",
+    "eslint-plugin-html": "^5.0.3",
+    "eslint-plugin-import": "^2.17.2",
+    "eslint-plugin-jest": "^22.5.1",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-node": "^9.0.1",
+    "eslint-plugin-promise": "^4.1.1",
+    "eslint-plugin-react": "^7.13.0",
+    "eslint-plugin-standard": "^4.0.0",
     "webpack": "^4.29.6"
   },
   "dependencies": {
